<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.idi.intellij.plugins</groupId>
	<artifactId>sqlref-plugin</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT.</version>
	<name>SQLRef Jump to Usage</name>
	<description>Jumps from SQLRef annotation to XML linked id</description>

	<dependencies>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.2</version>
			<scope>compile</scope>

		</dependency>
		<dependency>
			<groupId>jsyntaxpane</groupId>
			<artifactId>jsyntaxpane</artifactId>
			<version>0.9.6</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources/META-INF</directory>
				<targetPath>META-INF</targetPath>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<verbose>true</verbose>
					<fork>false</fork>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>src-dist</id>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>
							${basedir}/src/main/assembly/bin-descriptor.xml
						</descriptor>
						<descriptor>
							${basedir}/src/main/assembly/src-descriptor.xml
						</descriptor>
					</descriptors>
					<finalName>${pom.artifactId}-${pom.version}</finalName>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<!--
		-Xms128m -Xmx512m -XX:MaxPermSize=250m -XX:ReservedCodeCacheSize=64m -ea
		-->
</project>